update apartmens sqm by one click for sames
